# Movie-Recommender-System

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .pdm-python  CICD_SETUP.md  DEPLOYMENT.md  Dockerfile  README.md  TODO.md  app.py  cronjob.sh  download_data_xx.py  evaluation_results.json  pyproject.toml  requirements.txt  sample_ratings.csv  train_model.py  watch_time.csv  workflow.md  xx.py
data/: model_watch_time_logistic.pkl  model_watch_time_mappings.pkl  model_watch_time_xgb.pkl  movie_ids.txt  popular_movies.csv  raw_data.dvc  retrain_state.json  training_data.csv  training_data.parquet.dvc  training_data_improved.csv  training_data_v2.csv  user_ids.txt
docker/: Dockerfile  docker-compose.test.yml  docker-compose.yml
models/: data_provenance.csv  evaluation_events.csv  model_provenance.csv  prediction_events.csv
monitoring/: docker-compose.yml  grafana-dashboard.json  grafana-dashboards.yml  prometheus.yml  simulate_traffic.py  traffic_gen.py
movies/: 1+-+nenokkadine+2014.json  10+1979.json  10+rillington+place+1971.json  10.5+2004.json  100+feet+2008.json  100+years+at+the+movies+1994.json  1001+nights+1990.json  101+reykjavik+2000.json  12+2007.json  12+angry+men+1957.json  12+days+of+terror+2005.json  1208+east+of+bucharest+2006.json  127+hours+2010.json  12th++delaware+2010.json  13+2010.json  13+assassins+2010.json  13+frightened+girls+1963.json  13+rue+madeleine+1947.json  13+tzameti+2005.json  13b+fear+has+a+new+address+2009.json  1408+2007.json  15+minutes+2001.json  16+blocks+2006.json  17+again+2009.json  1776+1972.json  (+5797 more)
(+11276 files in other folders)
